# agETH

./: .gitignore  Dockerfile  app.py  astro.config.mjs  chatbot.py  chatbot.ts  myActionProvider.test.ts  myActionProvider.ts  myagent.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml
patches/: @coinbase%2Fagentkit@0.1.2.patch
src/: web.ts
src/components/: StreamingText.jsx
src/pages/: index.astro
src/pages/api/: stream.ts
src/utils/: aaveYieldsActionProvider.ts  chatbot.ts  myActionProvider.test.ts  myActionProvider.ts  unwrapWethActionProvider.ts
